--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "private": true,
   "version": "1.0.0",
   "engines": {
-    "node": "^10.13 || 12 || 14 || 15",
+    "node": "^16.14",
     "npm": ">=6"
   },
   "dependencies": {
-    "@craco/craco": "6.1.1",
+    "@craco/craco": "7.1.0",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.2",
     "@wojtekmaj/enzyme-adapter-react-17": "0.6.3",
     "chalk": "4.1.0",
-    "enzyme": "3.11.0",
     "date-fns": "2.23.0",
+    "enzyme": "3.11.0",
     "history": "5.0.1",
     "jest-styled-components": "7.0.5",
     "js-cookie": "3.0.0",
@@ -25,20 +25,22 @@
     "react-loader-spinner": "4.0.0",
     "react-player": "2.9.0",
     "react-router-dom": "5.2.0",
+    "react-scripts": "5.0.1",
     "reactjs-popup": "2.0.5",
     "styled-components": "5.3.0",
     "surge": "0.23.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "7.23.10",
     "babel-plugin-styled-components": "1.13.2",
+    "eslint": "8.56.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
-    "prettier": "2.2.1",
-    "react-scripts": "4.0.3"
+    "prettier": "2.2.1"
   },
   "scripts": {
     "start": "craco start",
