--- a/.eslintrc
+++ b/.eslintrc
@@ -55,6 +55,7 @@
     "react/no-unescaped-entities": "warn",
     "react/jsx-props-no-spreading": "off",
     "operator-assignment": ["warn", "always"],
-    "radix": "off"
+    "radix": "off",
+    "class-methods-use-this": 0
   }
 }
